--- a/src/app/pages/djagora-academy/scrum/sprints/evaluation/evaluation.component.html
+++ b/src/app/pages/djagora-academy/scrum/sprints/evaluation/evaluation.component.html
@@ -100,106 +100,106 @@
         <form [formGroup]="statForm3">
             <table class="table" style="border: 2px;">
                 <tr>
-                    <th rowspan="5">Tête de pont</th>
-                    <td>Le client cible a-t-il de l’argent ? </td>
+                    <th rowspan="5">head of the bridge</th>
+                    <td>Does the target customer have money? </td>
                     <td> <select class="form-control" formControlName="tp1" aria-label="Default select example">
-                            <option value="0">Insuffisant</option>
-                            <option value="30">En cours</option>
+                            <option value="0">Insufficient</option>
+                            <option value="30">In progress</option>
                             <option value="60">Acceptable</option>
-                            <option value="100">Validé</option>
+                            <option value="100">Valid</option>
 
                         </select></td>
 
 
                 </tr>
                 <tr>
-                    <td>Vous avez identifié le plus grand défi pour votre start-up ?</td>
+                    <td>Have you identified the biggest challenge for your start-up?</td>
                     <td> <select class="form-select" formControlName="tp2" aria-label="Default select example">
-                            <option value="0">Insuffisant</option>
-                            <option value="30">En cours</option>
+                            <option value="0">Insufficient</option>
+                            <option value="30">In progress</option>
                             <option value="60">Acceptable</option>
-                            <option value="100">Validé</option>
+                            <option value="100">Valid</option>
 
                         </select></td>
                 </tr>
                 <tr>
-                    <td>Disposez vous d'un schéma de segmentation de votre marché.</td>
+                    <td>Do you have a segmentation plan for your market?</td>
                     <td> <select class="form-select" formControlName="tp3" aria-label="Default select example">
-                            <option value="0">Insuffisant</option>
-                            <option value="30">En cours</option>
+                            <option value="0">Insufficient</option>
+                            <option value="30">In progress</option>
                             <option value="60">Acceptable</option>
-                            <option value="100">Validé</option>
+                            <option value="100">Valid</option>
 
                         </select></td>
                 </tr>
                 <tr>
-                    <td>Pouvez-vous lui fournir le produit complet?</td>
+                    <td>Can you provide him with the complete product?</td>
                     <td> <select class="form-select" formControlName="tp4" aria-label="Default select example">
-                            <option value="0">Insuffisant</option>
-                            <option value="30">En cours</option>
+                            <option value="0">Insufficient</option>
+                            <option value="30">In progress</option>
                             <option value="60">Acceptable</option>
-                            <option value="100">Validé</option>
+                            <option value="100">Valid</option>
 
                         </select></td>
                 </tr>
                 <tr>
-                    <td>Disposez vous des "ressources" suffisantes pour pénétrer d’autres marchés</td>
+                    <td>Do you have sufficient "resources" to penetrate other markets?</td>
                     <td> <select class="form-select" formControlName="tp5" aria-label="Default select example">
-                            <option value="0">Insuffisant</option>
-                            <option value="30">En cours</option>
+                            <option value="0">Insufficient</option>
+                            <option value="30">In progress</option>
                             <option value="60">Acceptable</option>
-                            <option value="100">Validé</option>
+                            <option value="100">Valid</option>
                         </select></td>
                 </tr>
                 <tr>
-                    <th rowspan="4">Profil utilisateur final</th>
-                    <td> Les utilisateurs finaux utilisent t-ils tous le même produit?
+                    <th rowspan="4">final user profile</th>
+                    <td> Do end users all use the same product?
 
                     </td>
                     <td> <select class="form-select" formControlName="uf1" aria-label="Default select example">
-                            <option value="0">Insuffisant</option>
-                            <option value="30">En cours</option>
+                            <option value="0">Insufficient</option>
+                            <option value="30">In progress</option>
                             <option value="60">Acceptable</option>
-                            <option value="100">Validé</option>
+                            <option value="100">Valid</option>
 
                         </select></td>
 
                 </tr>
                 <tr>
-                    <td>Les utilisateurs finaux ont t-ils exprimé leurs besoins?</td>
+                    <td>Have the final users expressed their needs?</td>
                     <td> <select class="form-select" formControlName="uf2" aria-label="Default select example">
-                            <option value="0">Insuffisant</option>
-                            <option value="30">En cours</option>
+                            <option value="0">Insufficient</option>
+                            <option value="30">In progress</option>
                             <option value="60">Acceptable</option>
-                            <option value="100">Validé</option>
+                            <option value="100">Valid</option>
 
                         </select></td>
                 </tr>
                 <tr>
-                    <td>A-t-il une bonne raison d’acheter votre produit ?</td>
+                    <td>Is there a good reason to buy your product?</td>
                     <td>
                         <select class="form-select" formControlName="uf3" aria-label="Default select example">
-                            <option value="0">Insuffisant</option>
-                            <option value="30">En cours</option>
+                            <option value="0">Insufficient</option>
+                            <option value="30">In progress</option>
                             <option value="60">Acceptable</option>
-                            <option value="100">Validé</option>
+                            <option value="100">Valid</option>
                         </select>
                     </td>
                 </tr>
                 <tr>
-                    <td>L'équipe peut fournir une solution complète ?</td>
+                    <td>Can the team provide a complete solution?</td>
                     <td>
                         <select class="form-select" formControlName="uf4" aria-label="Default select example">
-                            <option value="0">Insuffisant</option>
-                            <option value="30">En cours</option>
+                            <option value="0">Insufficient</option>
+                            <option value="30">In progress</option>
                             <option value="60">Acceptable</option>
-                            <option value="100">Validé</option>
+                            <option value="100">Valid</option>
                         </select>
                     </td>
                 </tr>
                 <tr>
-                    <th rowspan="5">TAM : La taille potentielle de votre marché</th>
-                    <td>Avez vous fixé des hypothèses :</td>
+                    <th rowspan="5">TAM : The potential size of your market</th>
+                    <td>Have you set any assumptions?</td>
                     <td>
                         <div class="form-check-inline">
                             <input formControlName="tam1" class="form-check-input" type="radio" value="1">
@@ -218,36 +218,36 @@
 
                 </tr>
                 <tr>
-                    <td>Combien coûte chaque produit ?</td>
+                    <td>How much does each product cost?</td>
                     <td>
                         <input type="number" formControlName="tam2">
                     </td>
 
                 </tr>
                 <tr>
-                    <td>Combien d’unités le client en achète pour l’utilisateur final ? </td>
+                    <td>How many units does the customer buy for the final user? </td>
                     <td>
                         <input type="number" formControlName="tam3">
                     </td>
                 </tr>
                 <tr>
-                    <td>La durée de vie moyenne du produit avant qu’il soit remplacé ? </td>
+                    <td>The average life of the product before it is replaced? </td>
                     <td>
                         <select class="form-select" formControlName="tam4" aria-label="Default select example">
-                            <option value="0">Insuffisant</option>
-                            <option value="30">En cours</option>
+                            <option value="0">Insufficient</option>
+                            <option value="30">In progress</option>
                             <option value="60">Acceptable</option>
-                            <option value="100">Validé</option>
+                            <option value="100">Valid</option>
                         </select>
                     </td>
                 </tr>
                 <tr>
-                    <td> Avez vous une idée sur le potentiel de votre marché? </td>
+                    <td> Do you have an idea of your market potential? </td>
                     <td> <select class="form-select" formControlName="tam5" aria-label="Default select example">
-                            <option value="0">Insuffisant</option>
-                            <option value="30">En cours</option>
+                            <option value="0">Insufficient</option>
+                            <option value="30">In progress</option>
                             <option value="60">Acceptable</option>
-                            <option value="100">Validé</option>
+                            <option value="100">Valid</option>
                         </select>
                     </td>
                 </tr>
@@ -263,45 +263,38 @@
         <form [formGroup]="statForm4">
             <table class="table">
                 <tr>
-                    <th>Identifier hypothèses clés</th>
-                    <td>Décrire les principales hypothèses sur lesquelles repose votre projet de façon à pouvoir les
-                        tester
-                        avant
-                        que le marché ne le fasse à votre place.</td>
+                    <th>Identify key assumptions</th>
+                    <td>Describe the main assumptions on which your project is based so that you can test them before
+             the market does it for you.</td>
                     <td>
                         <select class="form-select" formControlName="q1" aria-label="Default select example">
-                            <option value="0">Insuffisant</option>
-                            <option value="30">En cours</option>
+                            <option value="0">Insufficient</option>
+                            <option value="30">In progress</option>
                             <option value="60">Acceptable</option>
-                            <option value="100">Validé</option>
+                            <option value="100">Valid</option>
 
                         </select>
                     </td>
                 </tr>
                 <tr>
-                    <th>Tester hypothèses clés</th>
-                    <td>Organiser une série de petites expériences peu coûteuses pour tester chacune des hypothèses
-                        identifiées à
-                        l’étape précédente. Faites preuve d’imagination !
+                    <th>Test key assumptions</th>
+                    <td>Organize a series of small, inexpensive experiments to test each of the hypotheses identified in the previous step. Be imaginative!
                     </td>
                     <td> <select class="form-select" formControlName="q2" aria-label="Default select example">
-                            <option value="0">Insuffisant</option>
-                            <option value="30">En cours</option>
+                            <option value="0">Insufficient</option>
+                            <option value="30">In progress</option>
                             <option value="60">Acceptable</option>
-                            <option value="100">Validé</option>
+                            <option value="100">Valid</option>
                         </select></td>
                 </tr>
                 <tr>
-                    <th>MVBP : le produit minimum business viable</th>
-                    <td>Déterminer le produit minimum qui pourrait vous permettre de vérifier que votre utilisateur
-                        final
-                        tire de
-                        la valeur de votre produit et que celui-ci vous sera payé.</td>
+                    <th>MVBP : the minimum viable business product</th>
+                    <td>Determine the minimum product that could allow you to verify that your end user derives value from your product and that you will be paid for it.</td>
                     <td> <select class="form-select" formControlName="q3" aria-label="Default select example">
-                            <option value="0">Insuffisant</option>
-                            <option value="30">En cours</option>
+                            <option value="0">Insufficient</option>
+                            <option value="30">In progress</option>
                             <option value="60">Acceptable</option>
-                            <option value="100">Validé</option>
+                            <option value="100">Valid</option>
                         </select></td>
 
                 </tr>
