--- a/src/app/pages/djagora-academy/scrum/sprints/edit-sprint/edit-sprint.component.html
+++ b/src/app/pages/djagora-academy/scrum/sprints/edit-sprint/edit-sprint.component.html
@@ -263,11 +263,11 @@
     <!--sprint3-->
     <div class="card card-margin " *ngIf="sprint.name=='sprint 3' && sprint.project_id==SingleProject.id && sprint.state==1">
       <h1 class="titre">Evaluation {{sprint.name}}</h1>
-      <h2 class="my-4 mx-4" style="color: #0081c2;">Marché initial: Qui est votre client ?</h2>
+      <h2 class="my-4 mx-4" style="color: #0081c2;">Initial market: Who is your customer?</h2>
       <table class="table" style="border: 2px;">
         <tr>
-          <th rowspan="5">Tête de pont</th>
-          <td>Le client cible a-t-il de l’argent ? </td>
+          <th rowspan="5">head of the bridge</th>
+          <td>Does the target customer have money? </td>
           
           <td>{{evaluationSprint1.tp1}}%</td>
           <td rowspan="5">{{moy1}}%</td>
@@ -275,28 +275,28 @@
 
         </tr>
         <tr>
-          <td>Vous avez identifié le plus grand défi pour votre start-up ?</td>
+          <td>Have you identified the biggest challenge for your start-up?</td>
           
           <td>{{evaluationSprint1.tp2}}%</td>
         </tr>
         <tr>
-          <td>Disposez vous d'un schéma de segmentation de votre marché.</td>
+          <td>Do you have a segmentation plan for your market?</td>
         
           <td>{{evaluationSprint1.tp3}}%</td>
         </tr>
         <tr>
-          <td>Pouvez-vous lui fournir le produit complet?</td>
+          <td>Can you provide him with the complete product?</td>
          
           <td>{{evaluationSprint1.tp4}}%</td>
         </tr>
         <tr>
-          <td>Disposez vous des "ressources" suffisantes pour pénétrer d’autres marchés</td>
+          <td>Do you have sufficient "resources" to penetrate other markets?</td>
          
           <td>{{evaluationSprint1.tp5}}%</td>
         </tr>
         <tr>
-          <th rowspan="4">Profil utilisateur final</th>
-          <td> Les utilisateurs finaux utilisent t-ils tous le même produit?
+          <th rowspan="4">final user profile</th>
+          <td> Do end users all use the same product?
 
           </td>
          
@@ -305,23 +305,23 @@
 
         </tr>
         <tr>
-          <td>Les utilisateurs finaux ont t-ils exprimé leurs besoins?</td>
+          <td>Have the final users expressed their needs?</td>
         
           <td>{{evaluationSprint1.uf2}}%</td>
         </tr>
         <tr>
-          <td>A-t-il une bonne raison d’acheter votre produit ?</td>
+          <td>Is there a good reason to buy your product?</td>
           
           <td>{{evaluationSprint1.uf3}}%</td>
         </tr>
         <tr>
-          <td>L'équipe peut fournir une solution complète ?</td>
+          <td>Can the team provide a complete solution?</td>
          
           <td>{{evaluationSprint1.uf4}}%</td>
         </tr>
         <tr>
-          <th rowspan="5">TAM : La taille potentielle de votre marché</th>
-          <td>Avez vous fixé des hypothèses :</td>
+          <th rowspan="5">TAM : The potential size of your market</th>
+          <td>Have you set any assumptions?</td>
         
           <td *ngIf="evaluationSprint1.tam1==0" >No</td>
           <td *ngIf="evaluationSprint1.tam1==1" >Yes</td>
@@ -330,23 +330,23 @@
 
         </tr>
         <tr>
-          <td>Combien coûte chaque produit ?</td>
+          <td>How much does each product cost?</td>
           
           <td>{{evaluationSprint1.tam2}}</td>
 
         </tr>
         <tr>
-          <td>Combien d’unités le client en achète pour l’utilisateur final ? </td>
+          <td>How many units does the customer buy for the final user? </td>
        
           <td>{{evaluationSprint1.tam3}}</td>
         </tr>
         <tr>
-          <td>La durée de vie moyenne du produit avant qu’il soit remplacé ? </td>
+          <td>The average life of the product before it is replaced? </td>
        
           <td>{{evaluationSprint1.tam4}}%</td>
         </tr>
         <tr>
-          <td> Avez vous une idée sur le potentiel de votre marché? </td>
+          <td> Do you have an idea of your market potential? </td>
          
           <td>{{evaluationSprint1.tam5}}%</td>
         </tr>
@@ -358,29 +358,27 @@
     <!--sprint4-->
     <div class="card card-margin " *ngIf="sprint.name=='sprint 4' && sprint.project_id==SingleProject.id && sprint.state==1">
       <h1 class="titre">Evaluation {{sprint.name}}</h1>
-      <h2 class="my-4 mx-4" style="color: #0081c2;">Conception et fabrication: Comment fabriquez-vous votre produit ?
+      <h2 class="my-4 mx-4" style="color: #0081c2;">Design and manufacture: How do you manufacture your product?
       </h2>
       <table class="table">
         <tr>
-          <th>Identifier hypothèses clés</th>
-          <td>Décrire les principales hypothèses sur lesquelles repose votre projet de façon à pouvoir les tester avant
-            que le marché ne le fasse à votre place.</td>
+          <th>Identify key assumptions</th>
+          <td>Describe the main assumptions on which your project is based so that you can test them before
+             the market does it for you.</td>
         
             <td>{{evaluationSprint1.q1}}%</td>
             <td colspan="3">{{moy1}}%</td>
         </tr>
         <tr>
-          <th>Tester hypothèses clés</th>
-          <td>Organiser une série de petites expériences peu coûteuses pour tester chacune des hypothèses identifiées à
-            l’étape précédente. Faites preuve d’imagination !
+          <th>Test key assumptions</th>
+          <td>Organize a series of small, inexpensive experiments to test each of the hypotheses identified in the previous step. Be imaginative!
           </td>
          
           <td>{{evaluationSprint1.q2}}%</td>
         </tr>
         <tr>
-          <th>MVBP : le produit minimum business viable</th>
-          <td>Déterminer le produit minimum qui pourrait vous permettre de vérifier que votre utilisateur final tire de
-            la valeur de votre produit et que celui-ci vous sera payé.</td>
+          <th>MVBP : the minimum viable business product</th>
+          <td>Determine the minimum product that could allow you to verify that your end user derives value from your product and that you will be paid for it.</td>
          
             <td>{{evaluationSprint1.q3}}%</td>
         </tr>
@@ -389,10 +387,10 @@
           <th>Indicateur de suivis</th>
           <td>sprint</td>
          
-            <td style="color: red;" *ngIf="moy1<30"  >Insuffisant</td>
-            <td *ngIf="moy1<60 && moy1>=30" style="color:orange;" >En cours</td>
+            <td style="color: red;" *ngIf="moy1<30"  >insufficient</td>
+            <td *ngIf="moy1<60 && moy1>=30" style="color:orange;" >in progress</td>
             <td *ngIf="moy1>=60 && moy1<100" style="color: green;">Acceptable</td>
-            <td *ngIf="moy1==100" style="color: green;" >Validé</td>
+            <td *ngIf="moy1==100" style="color: green;" >Valid</td>
 
         </tr>
       
