--- a/src/app/pages/djagora-academy/scrum/backlog/backlog.component.html
+++ b/src/app/pages/djagora-academy/scrum/backlog/backlog.component.html
@@ -36,8 +36,8 @@
 
       <span *ngIf=" scrumBool==true " class="badge  badge-dark col-md-auto ml-1">
         <div class="row ">
-          <img [src]="imgpath+scrumMaster.img" alt="" style="width: 30%;border-radius:100%;">
-          <h6 style="margin-top: -15%;">{{scrumMaster.name}}</h6>
+          <img [src]="imgpath+scrumMaster.img" alt="" style="width:50px ;height: 30px;border-radius:100%;" >
+          <h6 style="margin-top: -15%;"> {{scrumMaster.name}}</h6>
         </div>
 
 
