--- a/src/app/pages/djagora-academy/scrum/sprints/edit-sprint/edit-sprint.component.html
+++ b/src/app/pages/djagora-academy/scrum/sprints/edit-sprint/edit-sprint.component.html
@@ -543,7 +543,7 @@
                 <div class="card-header no-border">
                   <span *ngIf="scrumMaster!=null" class="badge  badge-light col-md-auto my-2 ">
                     <div class="row ">
-                      <img [src]="imgpath+scrumMaster.img" alt="" style="width: 30%;border-radius:100%;">
+                      <img [src]="imgpath+scrumMaster.img" alt="" style="width:50px ;height: 30px;border-radius:100%;">
                       <h6 style="margin-top: -15%; color: gray;">{{scrumMaster.name}}</h6>
                     </div>
 
