--- a/src/app/pages/djagora-academy/scrum/backlog/edit-backlog/edit-backlog.component.html
+++ b/src/app/pages/djagora-academy/scrum/backlog/edit-backlog/edit-backlog.component.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="titre">
-    <h1 name="1">{{userStory.name}}</h1>
+    <h1 name="1">Edit userstory</h1>
 </div>
 
 <div class="container">
@@ -29,7 +29,6 @@
     </div>
     <div class=" ">
       <form  [formGroup]="userStoryForm">
-        <h4 style="color: #0081c2;" >Edit user story</h4>
 
         <div class="row justify-content-center">
           <div class="col-md-4 mb-4 mx-4">
