--- a/src/app/profil/edit-profil/edit-profil.component.html
+++ b/src/app/profil/edit-profil/edit-profil.component.html
@@ -157,7 +157,7 @@
                                     <h6 class="mb-0">Cv</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
-                                    <input type="file" (change)="onChangeCv($event)" class="form-control"
+                                    <input type="file" accept="application/pdf" (change)="onChangeCv($event)" class="form-control"
                                         formControlName="cv">
                                 </div>
                             </div>
