--- a/src/app/Components/about-us/about-us.component.css
+++ b/src/app/Components/about-us/about-us.component.css
@@ -3,6 +3,15 @@
   padding: 0;
   box-sizing: border-box;
 }
+.wrapper1 {
+  margin-left: 1em;
+  margin-right: 1em;
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row-gap: 1em;
+  grid-column-gap: 1em;
+}
 
 body {
   font-family: Calibri;
