Modification sur l'affichage des informations

--- a/src/app/Components/about-us/about-us.component.html
+++ b/src/app/Components/about-us/about-us.component.html
@@ -46,7 +46,8 @@
   <h2 name="1">Executive Team</h2>
   </div>
   <br>
-
+  <div class="rpbox">
+    
       <div class=" wrapper1">
       <div class="part2" *ngFor="let a of admins">
         <div class="Col"> 
@@ -56,11 +57,12 @@
             <h4>{{a.name}}</h4>
             <p>{{a.email}}</p>
             <a href=""> <i class="fa-brands fa-linkedin"></i></a>
-      
+          </div>
+        </div>
         </div>
       </div>
       </div>
-    </div>
+    
   </div>
 
 <!----------------------------------------->
