--- a/src/app/pages/djagora-academy/formations/formations.component.html
+++ b/src/app/pages/djagora-academy/formations/formations.component.html
@@ -6,7 +6,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="banner-heading">
-            <h1 class="banner-title">Djagora academy/Formations</h1>
+            <h1 class="banner-title">Djagora academy/Trainings</h1>
           </div>
         </div><!-- Col end -->
       </div><!-- Row end -->
