--- a/src/app/pages/djagora-academy/mentor/add-project-djagora-acadimy/add-project-djagora-acadimy.component.html
+++ b/src/app/pages/djagora-academy/mentor/add-project-djagora-acadimy/add-project-djagora-acadimy.component.html
@@ -51,7 +51,7 @@
                 <ng-template #noRecordsTemplate>
                   <span class='norecord'> NO DATA AVAILABLE</span>
                 </ng-template>
-              </ejs-multiselect>`
+              </ejs-multiselect>
             </div>
             <div class="col-md-5 mb-4 mx-4">
               <label for="validationServer03">Description</label>
