--- a/src/app/profil/edit-profil/edit-profil.component.html
+++ b/src/app/profil/edit-profil/edit-profil.component.html
@@ -149,7 +149,7 @@
                                     <ng-template #noRecordsTemplate>
                                         <span class='norecord'> NO DATA AVAILABLE</span>
                                     </ng-template>
-                                </ejs-multiselect>`
+                                </ejs-multiselect>
                             </div>
 
                             <div class="row mb-3 px-sm-3 py-sm-2">
