--- a/src/app/pages/djagora-academy/single-project/single-project.component.html
+++ b/src/app/pages/djagora-academy/single-project/single-project.component.html
@@ -403,7 +403,7 @@
 
 
 
-    <div class="  container bootstrap snippets bootdey ">
+    <div class="  justify-content-center bootstrap snippets bootdey ">
       <div class="row ">
         <div class="col-md-12">
           <div class="blog-comment">
