--- a/src/app/pages/djagora-academy/single-training/single-training.component.html
+++ b/src/app/pages/djagora-academy/single-training/single-training.component.html
@@ -48,7 +48,9 @@
           <br>
           <ul class="postcard__tagbox" style="list-style: none;">
             <li class="tag__item"><i class="fas fa-user mr-2"></i>{{Singleformation.formateur}}</li>
-            <li class="tag__item"><i class="fas fa-diagram-project mr-2"></i>{{Singleformation.domain}}</li>
+            <li  class="tag__item"><i class="fas fa-diagram-project mr-2"></i>
+				{{Singleformation.domain}}
+			</li>
 
            
           </ul>
